# ipaxos

./: CMakeLists.txt
src/: ipaxos.h
src/common/: collect.h  utils.h
src/executor/: executor.h
src/node/: paxos_config.h  paxos_impl.cc  paxos_impl.h  paxos_invoker.cc  paxos_node.cc  paxos_node.h
src/proto/: ipaxos_rpc.proto
tests/: unit_test_leader_fail.cc  unit_test_learn.cc
